add admin helper anda some fix in code
